added secret key to stop easy hijacking, added x

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -22,6 +22,8 @@ rtmp {
         #push rtmp://127.0.0.1:19352/live/<key>;
         #-Kick
         #push rtmp://127.0.0.1:19353/kick/<key>;
+		# X (New integration)
+        #push rtmp://127.0.0.1:19354/x/<key>;
         }
         
         application instagram {
