--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -1,7 +1,9 @@
 worker_processes auto;
 rtmp_auto_push on;
 rtmp_auto_push_reconnect 1s;
+
 events {}
+
 rtmp {
     server {
         listen 1935;
@@ -12,12 +14,8 @@ rtmp {
             live on;
             record off;
 
-
-            
-            # Valid stream keys
-            allow publish "your_secret_key_here";
-            allow publish "another_valid_key_here";
-            deny publish all;  
+            # Stream key validation
+            on_publish http://127.0.0.1:1935/validate;
 
             # Services
             #facebook
@@ -31,16 +29,33 @@ rtmp {
             #trovo
             #x
         }
-        
+
         application instagram {
             live on;
             record off;
 
-            # Optional: Separate stream key validation for Instagram
-            allow publish "your_secret_key_here";
-            deny publish all;
-
-            #instagram
+            # Stream key validation
+            on_publish http://127.0.0.1:1935/validate;
         }
+    }
+
+    location /validate {
+        internal;  # Prevent external access to this endpoint
+        set $valid_key 0;
+
+        # Define valid stream keys
+        if ($arg_name = "your_secret_key_here") {
+            set $valid_key 1;
+        }
+
+        if ($arg_name = "another_valid_key_here") {
+            set $valid_key 1;
+        }
+
+        if ($valid_key = 0) {
+            return 403;  # Forbidden for invalid keys
+        }
+
+        return 200;  # OK for valid keys
     }
 }
