--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -15,7 +15,7 @@ rtmp {
             record off;
 
             # Stream key validation
-            on_publish http://127.0.0.1:8080/validate;  # Use the correct port for validation
+            on_publish http://127.0.0.1:8080/validate;
 
             # Services
             push rtmp://a.rtmp.youtube.com/live2/2dfc-31v6-9kaj-rpeq-3s65;
@@ -38,8 +38,8 @@ http {
         listen 8080;
 
         location /validate {
-            internal;  # Prevent external access to this endpoint
-            set $valid_key 0;
+            internal;  
+            set $valid_key 0;  
 
             # Define valid stream keys
             if ($arg_name = "your_secret_key_here") {
