--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -13,20 +13,24 @@ rtmp {
         application live {
             live on;
             record off;
-
             # Stream key validation
             on_publish http://127.0.0.1:8080/validate;
-
             # Services
-            push rtmp://a.rtmp.youtube.com/live2/2dfc-31v6-9kaj-rpeq-3s65;
-            push rtmp://live.twitch.tv/app/live_26958464_F0Di8FWXggBMGoXjJEl2O0A303GV57;
-            push rtmp://127.0.0.1:19353/kick/sk_us-west-2_X3fdNoeyo9D9_B5CDp7xsrJx8efhXMLII8qYpgVXsZG;
+            #facebook
+            #youtube
+            #cloudflare
+            #twitch
+            #rtmp1
+            #rtmp2
+            #rtmp3
+            #kick
+            #trovo
+            #x
         }
 
         application instagram {
             live on;
             record off;
-
             # Stream key validation
             on_publish http://127.0.0.1:8080/validate;
         }
@@ -36,25 +40,26 @@ rtmp {
 http {
     server {
         listen 8080;
-
+        
         location /validate {
             internal;  # Prevent external access to this endpoint
-            set $valid_key 0;  # Initialize the variable
-
+            
+            set $allowed 0;  # Initialize the variable
+            
             # Define valid stream keys with correct if conditions
-            if ($arg_name = "your_secret_key_here") {
-                set $valid_key 1;
+            if ($arg_streamkey = "your_secret_key_here") {
+                set $allowed 1;
             }
-
-            if ($arg_name = "another_valid_key_here") {
-                set $valid_key 1;
+            
+            if ($arg_streamkey = "another_valid_key_here") {
+                set $allowed 1;
             }
-
+            
             # Reject streams with invalid keys
-            if ($valid_key != 1) {
+            if ($allowed != 1) {
                 return 403;  # Forbidden for invalid keys
             }
-
+            
             # Accept streams with valid keys
             return 200;  # OK for valid keys
         }
