--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -43,15 +43,15 @@ http {
         
         location /validate {
             internal;  # Prevent external access to this endpoint
-            
             set $allowed 0;  # Initialize the variable
+            set $name $arg_name;  # Get the stream key from the request
             
             # Define valid stream keys with correct if conditions
-            if ($arg_streamkey = "your_secret_key_here") {
+            if ($name = "your_secret_key_here") {
                 set $allowed 1;
             }
             
-            if ($arg_streamkey = "another_valid_key_here") {
+            if ($name = "another_valid_key_here") {
                 set $allowed 1;
             }
             
