--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -1,9 +1,7 @@
 worker_processes auto;
 rtmp_auto_push on;
 rtmp_auto_push_reconnect 1s;
-
 events {}
-
 rtmp {
     server {
         listen 1935;
@@ -34,11 +32,9 @@ rtmp {
         }
     }
 }
-
 http {
     include       mime.types;
     default_type  application/octet-stream;
-
     server {
         listen 8080;
         server_name localhost;
@@ -46,14 +42,13 @@ http {
         location /validate {
             internal;  # Prevent external access to this endpoint
             set $allowed 0;  # Initialize the variable
-            set $name $arg_name;  # Get the stream key from the request
             
             # Define valid stream keys with correct if conditions
-            if ($name = "your_secret_key_here") {
+            if ($arg_key = "your_secret_key_here") {
                 set $allowed 1;
             }
             
-            if ($name = "another_valid_key_here") {
+            if ($arg_key = "another_valid_key_here") {
                 set $allowed 1;
             }
             
