--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -40,25 +40,17 @@ http {
         server_name localhost;
         
         location /validate {
-            internal;  # Prevent external access to this endpoint
-            set $allowed 0;  # Initialize the variable
-            
-            # Define valid stream keys with correct if conditions
-            if ($arg_key = "your_secret_key_here") {
-                set $allowed 1;
+            internal;
+            if ($arg_name = "") {
+                return 403;
             }
-            
-            if ($arg_key = "another_valid_key_here") {
-                set $allowed 1;
+            if ($arg_name = "your_secret_key_here") {
+                return 200;
             }
-            
-            # Reject streams with invalid keys
-            if ($allowed != 1) {
-                return 403;  # Forbidden for invalid keys
+            if ($arg_name = "another_valid_key_here") {
+                return 200;
             }
-            
-            # Accept streams with valid keys
-            return 200;  # OK for valid keys
+            return 403;
         }
     }
 }
