added secret key to stop easy hijacking, added x

--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -41,7 +41,7 @@ http {
         
         location /validate {
             internal;
-            if ($arg_name ~ "^$") {
+            if (!$arg_name) {
                 return 403;
             }
             if ($arg_name "your_secret_key_here") {
