added secret key to stop easy hijacking, added x

--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -28,7 +28,7 @@ rtmp {
             live on;
             record off;
             # Stream key validation
-            on_publish http://127.0.0.1:8080/validate;
+            on_publish http://127.0.0.1:8080/validate?$name;
         }
     }
 }
