--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -40,13 +40,13 @@ http {
         listen 8080;
         server_name localhost;
 
-        # Exact match for a valid stream key
-        location = /validate?your_single_stream_key_here {
-            return 200;
-        }
-
-        # Fallback for invalid stream keys
         location /validate {
+            internal;
+
+            # Allow only the specific stream key
+            if ($arg_name = "your_single_stream_key_here") {
+                return 200;
+            }
             return 403;
         }
     }
