--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -1,18 +1,17 @@
 worker_processes auto;
 rtmp_auto_push on;
 rtmp_auto_push_reconnect 1s;
-
 events {}
-
 rtmp {
     server {
         listen 1935;
         listen [::]:1935 ipv6only=on;
         chunk_size 4096;
-
         application live {
             live on;
             record off;
+            # Stream key validation
+            on_publish http://127.0.0.1:8080/validate;
             # Stream services configurations
             # YouTube
             #push rtmp://a.rtmp.youtube.com/live2/<key>;
@@ -31,34 +30,25 @@ rtmp {
         application instagram {
             live on;
             record off;
+            # Stream key validation
+            on_publish http://127.0.0.1:8080/validate;
             # Instagram configuration
             #push rtmp://127.0.0.1:19351/rtmp/<key>;
         }
     }
 }
-
 http {
     include       mime.types;
     default_type  application/octet-stream;
-
     server {
         listen 8080;
         server_name localhost;
-
-        # Validate stream key
         location /validate {
             internal;
-            if ($arg_name) {
-                set $validated 0;
-                if ($arg_name = "your_single_stream_key_here") {
-                    set $validated 1;
-                }
-                if ($validated = 0) {
-                    return 403;
-                }
-                return 200;
+            if ($arg_name != "your_single_stream_key_here") {
+                return 403;
             }
-            return 403;
+            return 200;
         }
     }
 }
