--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -10,8 +10,8 @@ rtmp {
         application live {
             live on;
             record off;
-            # Stream key validation - updated to pass key parameter
-            on_publish http://127.0.0.1:8080/validate?key=$arg_name;
+            # Stream key validation - using $name instead of $arg_name
+            on_publish http://127.0.0.1:8080/validate?key=$name;
             
             # Stream services configurations
             # YouTube
@@ -36,8 +36,8 @@ rtmp {
         application instagram {
             live on;
             record off;
-            # Stream key validation - updated to pass key parameter
-            on_publish http://127.0.0.1:8080/validate?key=$arg_name;
+            # Stream key validation - using $name instead of $arg_name
+            on_publish http://127.0.0.1:8080/validate?key=$name;
             
             # Instagram configuration
             #instagram
