--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -6,9 +6,9 @@ rtmp {
     server {
         listen 1935;
         listen [::]:1935 ipv6only=on;
-        chunk_size 4096;
+        chunk_size 8192;
 
-        application live {
+        application {{STREAM_APP}} {
             live on;
             record off;
             #facebook
