--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -8,7 +8,7 @@ rtmp {
         listen [::]:1935 ipv6only=on;
         chunk_size 8192;
 
-        application {{STREAM_APP}} {
+        application ${STREAM_APP} {
             live on;
             record off;
             #facebook
