--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,13 +1,13 @@
 # These are supported funding model platforms
 
-github: MorrowShore
+github: #
 patreon: MorrowShore
-open_collective: # Replace with a single Open Collective username
+open_collective: #
 ko_fi: MorrowShore
-tidelift: # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
-community_bridge: # Replace with a single Community Bridge project-name e.g., cloud-foundry
-liberapay: # Replace with a single Liberapay username
-issuehunt: # Replace with a single IssueHunt username
-otechie: # Replace with a single Otechie username
-lfx_crowdfunding: # Replace with a single LFX Crowdfunding project-name e.g., cloud-foundry
+tidelift: #
+community_bridge: #
+liberapay: #
+issuehunt: #
+otechie: #
+lfx_crowdfunding: #
 custom: https://morrowshore.com/store/
