tidied up stuff

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,24 +11,10 @@ rtmp {
         application ${STREAM_APP} {
             live on;
             record off;
+            
+        #Ignore this file.  
         #This setting will be overridden by the template.
-        #-YouTube
-        #push rtmp://a.rtmp.youtube.com/live2/<key>;
-        #-Facebook;
-        #push rtmp://127.0.0.1:19350/rtmp/<key>;
-        #-Instagram;
-        #push rtmp://127.0.0.1:19351/rtmp/<key>;
-        #-Cloudflare
-        #push rtmp://127.0.0.1:19352/live/<key>;
-        #-Kick
-        #push rtmp://127.0.0.1:19353/kick/<key>;
-        }
         
-        application instagram {
-            live on;
-            record off;
-            #-Instagram;
-            #push rtmp://127.0.0.1:19351/rtmp/<key>;
         }
 
     }
